# embedded

./: .gitignore  README.md  bitwise-cheatsheet.md  new_project.sh
projects/blinking_light/: README.md
projects/blinking_light/src/: main.c
projects/blinking_light/src/include/: led.h
projects/uart/: README.md
projects/uart/one-way-comm/: CMakeLists.txt
projects/uart/one-way-comm/src/: gpio.h  main.c  usart.h
projects/uart/one-way-comm/src/include/: gpio.h  rcc.h  usart.h
projects/uart/one-way-comm/src/rx/: main.c
projects/uart/one-way-comm/src/tx/: main.c
projects/uart/two-way-comm/: CMakeLists.txt
projects/uart/two-way-comm/src/: main.c
projects/uart/two-way-comm/src/include/: usart.h
stm32f401re_boilerplate/: CMakeLists.txt  toolchain-arm.cmake
template/: CMakeLists.txt
template/src/: main.c
